# si-code-asmt

./: .gitignore  README.md  Solution_and_workflow.txt  main.py  pyproject.toml
provided/: 3d_data.csv  3d_data_plane.csv  bounds.py  constants.py  data.py  loader.py  network.py
